[gd_scene format=3 uid="uid://dh0ewunxu642y"]

[ext_resource type="Script" uid="uid://b444x72ccgt7y" path="res://client/scenes/Main.gd" id="1_vry3p"]
[ext_resource type="Script" uid="uid://btse0gw104k0w" path="res://client/ClientMain.gd" id="2_qagc2"]
[ext_resource type="Script" uid="uid://dx8vnjmxp2w0q" path="res://client/player/PlayerController.gd" id="3_61aeb"]
[ext_resource type="PackedScene" uid="uid://d17o0bh8ugfsl" path="res://client/ui/DebugOverlay.tscn" id="3_qagc2"]
[ext_resource type="PackedScene" uid="uid://bgj5joj3rl5t4" path="res://client/ui/Crosshair.tscn" id="5_o416a"]
[ext_resource type="Script" uid="uid://tdoqye7uhcsk" path="res://client/ui/Crosshair.gd" id="6_488fb"]

[sub_resource type="PlaneMesh" id="PlaneMesh_qagc2"]

[node name="Main" type="Node3D" unique_id=1215585823]
script = ExtResource("1_vry3p")

[node name="ServerRoot" type="Node" parent="." unique_id=1039749820]

[node name="ClientRoot" type="Node3D" parent="." unique_id=325835354]

[node name="ClientMain" type="Node3D" parent="ClientRoot" unique_id=1269811465]
script = ExtResource("2_qagc2")

[node name="Player" type="CharacterBody3D" parent="ClientRoot/ClientMain" unique_id=1470655642]
script = ExtResource("3_61aeb")

[node name="Camera3D" type="Camera3D" parent="ClientRoot/ClientMain/Player" unique_id=1576581674]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Ground" type="MeshInstance3D" parent="ClientRoot/ClientMain" unique_id=47676382]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
visible = false
mesh = SubResource("PlaneMesh_qagc2")

[node name="DebugOverlay" parent="." unique_id=775984326 instance=ExtResource("3_qagc2")]

[node name="Crosshair" parent="." unique_id=2033483516 instance=ExtResource("5_o416a")]
script = ExtResource("6_488fb")
